-Set Default Format to Rich Text.
-Fixed Usings to be above Namespace (Check ruleset?).

-Added Spaces to MD Header formats, so they work properly on Markdowns such as Github's.

-Created EnsureAtStartOfCurrentLine(), moves the Selected Start Position to the Start of the Current Line.

-MD Headers will now be inserted on the Current Line.

-Moved RichText FormatUnderline to RichTextButtonActions.

-Moved ButtonType to it's own file.

-Unsealed ToolbarButton.

-Fixed Public Accessors on Methods that should be private.

-Fixed KeyDown overrides, Ctrl + A, other Ctrl Shortcuts now work again. Improved Shortcut override behavior for Crtl + - (Strikethrough).

-Fixed Header Flyout Distance from Bar.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -154,6 +154,7 @@
     <Compile Include="TextToolbar\TextToolbarStrings.cs" />
     <Compile Include="TextToolbar\TextToolbar.Properties.cs" />
     <Compile Include="TextToolbar\ToolbarItems\ButtonMap.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\ButtonType.cs" />
     <Compile Include="TextToolbar\ToolbarItems\Common\CommonButtons.cs" />
     <Compile Include="TextToolbar\ToolbarItems\Common\CommonButtons.Events.cs" />
     <Compile Include="TextToolbar\ToolbarItems\DefaultButton.cs" />
