-Replaced RemoveDefaultButtons with ButtonModifications, allowing you to change the visibility of a default button from XAML, with IsVisible.
-Added method to get Default Button instance from TextToolbar in Enum.

-Made RemoveToolbarItem public.

-Updated Doc.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -159,7 +159,7 @@
     <Compile Include="TextToolbar\ToolbarItems\Common\CommonButtons.Events.cs" />
     <Compile Include="TextToolbar\ToolbarItems\DefaultButton.cs" />
     <Compile Include="TextToolbar\ToolbarItems\IToolbarItem.cs" />
-    <Compile Include="TextToolbar\ToolbarItems\RemovalList.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\DefaultButtonModificationList.cs" />
     <Compile Include="TextToolbar\ToolbarItems\ToolbarButton.cs" />
     <Compile Include="TextToolbar\ToolbarItems\ToolbarSeparator.cs" />
     <Compile Include="TextBoxRegex\TextBoxRegex.cs" />
