-Renamed IsFormat to ToolbarFormatActiveConverter, moved to Controls from SampleApp to be usable for anyone. Added safer conversion and ConvertBack.
-Fixed List Button colors when IsEnabled=false, and changing the theme.

-Moved Uri creation out of Task for Previewer.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -144,6 +144,7 @@
     <Compile Include="TextToolbar\Formats\MarkDown\MarkDownFormatter.cs" />
     <Compile Include="TextToolbar\Formats\RichText\RichTextButtonActions.cs" />
     <Compile Include="TextToolbar\Formats\RichText\RichTextFormatter.cs" />
+    <Compile Include="TextToolbar\ToolbarFormatActiveConverter.cs" />
     <Compile Include="TextToolbar\ShortcutKeyRequestArgs.cs" />
     <Compile Include="TextToolbar\Symbols\List.cs" />
     <Compile Include="TextToolbar\Symbols\NumberedList.cs" />
