--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -168,6 +168,7 @@
     <Content Include="Assets\People\petri.png" />
     <Content Include="Assets\People\shen.png" />
     <Content Include="Assets\People\vlad.png" />
+    <Content Include="Assets\Photos\artur-rutkowski-97622.jpg" />
     <Content Include="Assets\Photos\BigFourSummerHeat.jpg" />
     <Content Include="Assets\Photos\BisonBadlandsChillin.jpg" />
     <Content Include="Assets\Photos\ColumbiaRiverGorge.jpg" />
@@ -1045,7 +1046,7 @@
       $(_GenerateAppxManifestDependsOn)
     </_GenerateAppxManifestDependsOn>
   </PropertyGroup>
-  <Target Name="ModifyAppXPackage" Condition="'$(BuildingProject)' == 'true'" >
+  <Target Name="ModifyAppXPackage" Condition="'$(BuildingProject)' == 'true'">
     <ItemGroup>
       <toolkit_docs Include="$(SolutionDir)docs\**\*.md" />
     </ItemGroup>
