-Initial Build of new Cake File.
-Doesn't seem to build all projects.

-.NET Standard Projects don't seem to Generate the correct Output Directory, Nuspec files have been patched temporarily.

-Removed PSake and Nuget from Tools.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ init:
 - ps: git config --global core.autocrlf true
 
 build_script:
-- ps: .\build\build.ps1 SignNuGet
+- ps: .\build\build.ps1 -target=SignNuGet
 
 artifacts:
 - path: .\bin\nupkg\*.nupkg
