--- a/Microsoft.Toolkit.Uwp.Notifications/Microsoft.Toolkit.Uwp.Notifications.csproj
+++ b/Microsoft.Toolkit.Uwp.Notifications/Microsoft.Toolkit.Uwp.Notifications.csproj
@@ -13,7 +13,11 @@
   </ItemGroup>
   
   <ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' or '$(TargetFramework)' == 'native' ">
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform " Version="5.3.4" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="5.3.4" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'native' ">
+    <PackageReference Update="Microsoft.NETCore.UniversalWindowsPlatform" PrivateAssets="all" />
   </ItemGroup>
 
   
