--- a/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
+++ b/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <Description>This .NET standard library enables access to different data sources such as Bing. It is part of the UWP Community Toolkit.</Description>
+    <PackageTags>UWP Toolkit Windows Bing</PackageTags>
+    <Title>UWP Community Toolkit .NET Standard Services</Title>
   </PropertyGroup>
 
   <ItemGroup>
