--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -1,130 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{805F80DF-75C6-4C2F-8FD9-B47F6D0DF5A3}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Toolkit.Uwp</RootNamespace>
-    <AssemblyName>Microsoft.Toolkit.Uwp</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.15063.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.14393.0</TargetPlatformMinVersion>
-    <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFramework>uap10.0</TargetFramework>
+    <Title>UWP Community Toolkit</Title>
+    <Description>This package includes code only helpers such as Colors conversion tool, Storage file handling, a Stream helper class, etc.</Description>
+    <PackageTags>UWP Toolkit Windows</PackageTags>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Microsoft.Toolkit.Uwp.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>microsoft.toolkit.uwp.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>bin\Release\Microsoft.Toolkit.Uwp.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>microsoft.toolkit.uwp.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-  </PropertyGroup>
+
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>5.3.4</Version>
-    </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers">
-      <Version>1.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Identity.Client">
-      <Version>1.0.304142221-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>9.0.1</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="5.3.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    
+    <!-- TODO: Update to later version -->
+    <PackageReference Include="Microsoft.Identity.Client" Version="1.0.304142221-alpha" />
+
+
+    <ProjectReference Include="..\Microsoft.Toolkit\Microsoft.Toolkit.csproj" />
+
+    <EmbeddedResource Include="**\*.rd.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="Microsoft.Toolkit.Uwp.ruleset">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Helpers\DeepLinkParser\CollectionFormingDeepLinkParser.cs" />
-    <Compile Include="Helpers\BackgroundTaskHelper.cs" />
-    <Compile Include="Helpers\ColorHelper.cs" />
-    <Compile Include="Helpers\DispatcherHelper.cs" />
-    <Compile Include="Helpers\ObjectStorage\BaseObjectStorageHelper.cs" />
-    <Compile Include="Helpers\ObjectStorage\IObjectStorageHelper.cs" />
-    <Compile Include="Helpers\ObjectStorage\LocalObjectStorageHelper.cs" />
-    <Compile Include="Helpers\ObjectStorage\RoamingObjectStorageHelper.cs" />
-    <Compile Include="Helpers\DeepLinkParser\DeepLinkParser.cs" />
-    <Compile Include="Helpers\DeepLinkParser\QueryParameterCollection.cs" />
-    <Compile Include="Helpers\PrintHelper\PrintHelper.cs" />
-    <Compile Include="Helpers\PrintHelper\PrintHelperStateBag.cs" />
-    <Compile Include="Helpers\HttpHelper\HttpHelper.cs" />
-    <Compile Include="Helpers\HttpHelper\HttpHelperRequest.cs" />
-    <Compile Include="Helpers\HttpHelper\HttpHelperResponse.cs" />
-    <Compile Include="Helpers\ScreenUnit.cs" />
-    <Compile Include="Helpers\ScreenUnitHelper.cs" />
-    <Compile Include="Helpers\StorageFileHelper.cs" />
-    <Compile Include="Helpers\SystemInformation.cs" />
-    <Compile Include="Helpers\WeakEventListener.cs" />
-    <Compile Include="IncrementalLoadingCollection\IIncrementalSource.cs" />
-    <Compile Include="IncrementalLoadingCollection\IncrementalLoadingCollection.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\StreamHelper.cs" />
-    <Compile Include="Structures\HslColor.cs" />
-    <Compile Include="Structures\HsvColor.cs" />
-    <Compile Include="Structures\OSVersion.cs" />
-    <EmbeddedResource Include="Properties\Microsoft.Windows.Toolkit.rd.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Toolkit\Microsoft.Toolkit.csproj">
-      <Project>{6fe128a8-cefa-4a61-a987-ec92de6b538e}</Project>
-      <Name>Microsoft.Toolkit</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
-    <VisualStudioVersion>14.0</VisualStudioVersion>
-  </PropertyGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <Target Name="Before_PrepareLibraryLayout" BeforeTargets="PrepareLibraryLayout">
-    <PropertyGroup>
-      <Saved_OutputPath>$(OutputPath)</Saved_OutputPath>
-      <Saved_TargetPath>$(TargetPath)</Saved_TargetPath>
-      <OutputPath>$(OutDir)</OutputPath>
-      <TargetPath>
-      </TargetPath>
-    </PropertyGroup>
-  </Target>
-  <Target Name="After_PrepareLibraryLayout" AfterTargets="PrepareLibraryLayout">
-    <PropertyGroup>
-      <OutputPath>$(Saved_OutputPath)</OutputPath>
-      <TargetPath>$(Saved_TargetPath)</TargetPath>
-    </PropertyGroup>
-  </Target>
+
+  <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
