--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,7 +11,7 @@
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
 
 
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)Toolkit.ruleset</CodeAnalysisRuleSet>
     
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -20,6 +20,8 @@
     <IsUwpProject>$(MSBuildProjectName.Contains('Uwp'))</IsUwpProject>
     <IsSampleProject>$(MSBuildProjectName.Contains('Sample'))</IsSampleProject>
 
+    <GenerateDocumentationFile Condition="'$(IsTestProject)' != 'true' and '$(IsSampleProject)' != 'true'">true</GenerateDocumentationFile>
+    
     <UwpMetaPackageVersion>5.3.4</UwpMetaPackageVersion>
     <DefaultTargetPlatformVersion>15063</DefaultTargetPlatformVersion>
     <DefaultTargetPlatformMinVersion>14393</DefaultTargetPlatformMinVersion>
