--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,9 @@ image: Visual Studio 2017
 
 branches:
   only:
-  - dev
   - master
-  - build
-  - 1.5.1
+  - rel/2.0.0
+  - rel/2.0.1
 
 environment:
   SignClientSecret:
